--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,31 @@
-streamlit
-langchain
-langchain_community
-openai
-langchain-google-genai
-langchain-google
-google-cloud
-faiss-cpu
-pypdf
-pymupdf
+fitz
+time
+torch
+getpass
+requests
+mimetypes
 pytesseract
-tiktoken
-sentence_transformers
-pytesseract
+numpy 
+pandas 
+PIL 
+langchain 
+PyPDF2 
+collections 
+google.colab 
+huggingface_hub 
+semantic_router 
+google.colab 
+langchain.schema 
+pdf2image  
+langchain.vectorstores 
+semantic_router.layer 
+vertexai.generative_models 
+langchain.prompts 
+semantic_router.encoders 
+sentence_transformers 
+langchain_google_genai 
+langchain_huggingface 
+langchain_core.output_parsers 
+langchain.text_splitter 
+langchain_core.runnables 
+transformers
