--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,14 @@
-fitz
-time
 torch
-getpass
 requests
-mimetypes
 pytesseract
-numpy 
-pandas 
-PIL 
-langchain 
-PyPDF2 
-collections 
-google.colab 
-huggingface_hub 
-semantic_router 
-google.colab 
-langchain.schema 
-pdf2image  
-langchain.vectorstores 
-semantic_router.layer 
-vertexai.generative_models 
-langchain.prompts 
-semantic_router.encoders 
-sentence_transformers 
-langchain_google_genai 
-langchain_huggingface 
-langchain_core.output_parsers 
-langchain.text_splitter 
-langchain_core.runnables 
+numpy
+pandas
+Pillow
+langchain
+PyPDF2
+pdf2image
+sentence_transformers
 transformers
+huggingface_hub
+semantic_router
+google-generativeai
