--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+streamlit==1.21.0
+openai==0.27.0  # Or the appropriate version of the API for genai
+requests==2.28.2
+PyPDF2==1.26.0  # To handle PDF files if necessary
+mimetypes==0.9.0
+
 torch
 requests
 pytesseract
